--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 #app {
     color:blue;
 }
+
+.col-4 {
+    width: 100px;
+    height: 100px;
+    font: size 25px;
+    text-align: center;
+    line-height: 100px;
+    border: 1px solid #000;
+}
