--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
+body {
+background-color: rgb(248, 241, 232);
+font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
 #app {
-    color:blue;
+    color:rgb(0, 0, 40);
     width: 20%;
     margin:1%;
 }
