--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,18 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
     height: 210px;
     font: size 25px;
     border: 2px solid #000;
+    cursor: pointer;
+}
+
+.tile {
+    width: 100px;
+    height: 100px;
+    border: 1px solid #000;
+    display: inline-block;
+    font-size: 48px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;
 }
 
 button{
