--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+body {
+background-color: rgb(248, 241, 232);
+font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+#app {
+    color:rgb(0, 0, 40);
+    width: 40%;
+    margin-left: 30%;
+    margin-top: 1%;
+    text-align: center;
+}
+
+.col-4 {
+    width: 210px;
+    height: 210px;
+    font-size: 130px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    border: 2px solid rgb(0, 0, 40);
+    cursor: pointer;
+}
 
 
 button{
@@ -6,3 +29,4 @@ button{
     color: rgb(248, 241, 232);
     background-color: rgb(0, 0, 40);
 }
+
