--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
     color:rgb(0, 0, 40);
     width: 100vw;
     height: 100vh;
-    margin-top: 5%;
+    margin: 5%;
     text-align: center;
 }
 
