--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,15 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
     text-align: center;
 }
 
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin: 5%;
+}
+
 .col-4 {
     width: 220px;
     height: 220px;
