--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,19 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
 }
 
 #app {
-    color:rgb(0, 0, 40);
     width: 100vw;
     height: 100vh;
-    margin: 5%;
+    margin: 2%;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .col-4 {
-    width: 220px;
-    height: 220px;
-    font-size: 120px;
+    width: 210px;
+    height: 210px;
+    font-size: 130px;
     border: 2px solid rgb(0, 0, 50);
     cursor: pointer;
 }
