--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
     font-size: 130px;
     border: 2px solid rgb(0, 0, 50);
     cursor: pointer;
+    margin: 0 auto; 
 }
 
 
