--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,46 @@
 body {
+display: flex;
+justify-content: center;
+width: 100vw;
+height: 100vh;
 background-color: rgb(248, 241, 232);
 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
 #app {
-    margin: 1%;
+    margin: 2%;
     text-align: center;
 }
 
 .col-4 {
-    width: 210px;
-    height: 210px;
-    font-size: 130px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width:200px;
+    height: 200px;
+    font-size: 100px;
     border: 2px solid rgb(0, 0, 50);
     cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .col-4 {
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        width:100px;
+        height: 100px;
+        font-size: 50px;
+        border: 2px solid rgb(0, 0, 50);
+        cursor: pointer;
+    }
 }
 
 
 button{
     border-radius: 10%;
-    height: 50px;
+    border: none;
+    padding: 5px;
     color: rgb(248, 241, 232);
-    background-color: rgb(0, 0, 40);
+    background-color: rgb(0, 0, 0);
 }
-
-
