--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
     align-items: center;
     width:200px;
     height: 200px;
-    font-size: 100px;
+    font-size: 120px;
     border: 2px solid rgb(0, 0, 50);
     cursor: pointer;
 }
@@ -30,7 +30,7 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
         align-items: center;
         width:100px;
         height: 100px;
-        font-size: 50px;
+        font-size: 60px;
         border: 2px solid rgb(0, 0, 50);
         cursor: pointer;
     }
@@ -43,4 +43,8 @@ button{
     padding: 5px;
     color: rgb(248, 241, 232);
     background-color: rgb(0, 0, 0);
+}
+
+h2 {
+    margin-top:10px;
 }
